# stack_chan

./: log.txt  partitions.csv  sdkconfig  sdkconfig.old
components/arduino/cores/esp32/: WString.h
components/arduino/cores/esp32/libb64/: cdecode.c
components/arduino/libraries/HTTPClient/src/: HTTPClient.h
components/esp32_vad/: CMakeLists.txt
components/espressif__esp-sr/: .component_hash  idf_component.yml
components/espressif__esp-sr/include/esp32/: esp_mn_models.h
components/espressif__esp-sr/include/esp32s3/: esp_afe_config.h
components/espressif__esp-sr/src/include/: esp_mn_speech_commands.h  esp_process_sdkconfig.h  model_path.h
components/fpng/: CMakeLists.txt  fpng.cpp  fpng.h
components/pubsub-c/: CMakeLists.txt
components/pubsub-c/src/: pubsub.h  sync.h
components/qmsd_ezfiles/: CMakeLists.txt  qmsd_ezfile.h  qmsd_ezfiles.c
components/qmsd_ezfiles/example/: main.c  partitions.csv
components/qmsd_ezfiles/example/ezfiles/: ezfile.txt
components/qmsd_ezfiles/tools/: generate_ezfiles.py
main/: CMakeLists.txt  SPIString.hpp  StreamSPIString.hpp  app_common.cpp  app_common.h  declaration.cpp  declaration.h  main.cpp  resources.h  rgb565_to_gray_lut.h
main/anime/: anime.cpp  anime.h  anime_base.h  anime_eye.h  anime_label.h  anime_log.h  anime_mouth.h  anime_moveable_label.h  anime_moveable_obj.h  anime_moveable_png.h  anime_png.h  anime_rotatezoom_png.h  anime_seq.h  anime_task.cpp  anime_task.h
main/api/: api_base.hpp  api_caiyun.hpp  api_openweather.hpp  google_tts.hpp  gpt.hpp  whisper.hpp
main/device/: camera.hpp  ledstrip.hpp  pid.hpp  servo.hpp  settings.c  settings.h  wav_player.hpp
main/face/: who_human_face_detection.cpp  who_human_face_detection.hpp
main/sr/: app_function_call.cpp  app_function_call.h  app_sr.cpp  app_sr.h  app_sr_handler.cpp  app_sr_handler.h  file_manager.c  simple_vad.h  sr_config.h
main/task/: app_action.cpp  app_eye_task.cpp  app_face_track.cpp  app_led_task.cpp  app_motion.cpp  app_motion.h  app_task.h  app_touch.cpp  app_wifi.cpp
tools/: dither_test.py  rgb565_to_gray_lut.py
