idf_component_register(
    SRC_DIRS
        "webrtc/common_audio/signal_processing"
        "webrtc/common_audio/vad"

    INCLUDE_DIRS
        "webrtc/common_audio/signal_processing/include"
        "webrtc/common_audio/signal_processing"
        "webrtc/common_audio/vad/include"
        "webrtc/common_audio/vad/mock"
        "webrtc/common_audio/vad"
        "webrtc/rtc_base/numerics"
        "webrtc/rtc_base"
        "webrtc/system_wrappers/include"
        "webrtc"
)
